--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -16,6 +16,7 @@
     "firebase": "^9.9.2",
     "lodash": "^4.17.21",
     "mitt": "^3.0.0",
+    "papaparse": "^5.3.2",
     "pinia": "^2.0.18",
     "swiper": "^8.3.2",
     "vue": "^3.2.37",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@types/bootstrap": "^5.2.2",
     "@types/lodash": "^4.14.183",
+    "@types/papaparse": "^5.3.3",
     "@vitejs/plugin-vue": "^3.0.3",
     "sass": "^1.54.4",
     "typescript": "^4.6.4",
