--- a/packages/truffle/package.json
+++ b/packages/truffle/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "ganache": "node ganache.js"
+  },
   "dependencies": {
     "dotenv": "^16.0.1",
     "eth-gas-reporter": "^0.2.25",
@@ -16,6 +18,7 @@
     "bip39": "^3.0.4",
     "erc721a": "^4.2.2",
     "ethereumjs-wallet": "^1.0.2",
+    "ganache": "^7.4.1",
     "web3": "^1.7.5"
   }
 }
